Insert method of Red Black Tree

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,6 +5,11 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(src)
+add_subdirectory(src)
 
 add_executable(vec_test tests/vec_test.cpp)
 add_executable(list_test tests/list_test.cpp)
+add_executable(test_skiplist tests/test_skiplist.cpp)
+add_executable(test_hashmap tests/test_hashmap.cpp)
+add_executable(test_binary_search_tree tests/test_binary_search_tree.cpp)
+add_executable(test_red_black_tree tests/test_red_black_tree.cpp)
