--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(test_skiplist tests/test_skiplist.cpp)
 add_executable(test_hashmap tests/test_hashmap.cpp)
 add_executable(test_binary_search_tree tests/test_binary_search_tree.cpp)
 add_executable(test_red_black_tree tests/test_red_black_tree.cpp)
+add_executable(test_btree tests/test_btree.cpp)
